@@ -92,4 +92,3 @@ void libraries(string libname, int all, int strip)
     exit(0);
 }
 
-
