@@ -71,7 +71,8 @@ inline bool SocketBase::setReuse(bool trueIsOn)
 inline SocketBase::SocketBase(int socket, sockaddr_in const &address)
 :
     InetAddress(address),
-    d_sock(socket)
+    d_sock(socket),
+    d_msg(0)
 {}
 
 } // FBB
