@@ -1,5 +1,7 @@
 bobcat (2.02.02)
 
+  * Repaired incomplete initialization bug in SocketBase
+
   * Added Fork::prepareDaemon() performing common actions when starting a
     daemon child process.
 
